@@ -52,7 +52,7 @@ typedef struct encode_args_s {
 /* *INDENT-OFF* */
 /* --prototypes automatically generated by dev-bin/regen-prototypes.pl - don't remove this comment */
 LOCAL void insert_resolved_network(MMDBW_tree_s *tree, MMDBW_network_s *network,
-                                   SV *key_sv, SV *data);
+                                   SV *key_sv, SV *data, bool force_overwrite);
 LOCAL const char *store_data_in_tree(MMDBW_tree_s *tree,
                                      const char *const key,
                                      SV *data_sv);
@@ -160,7 +160,8 @@ MMDBW_tree_s *new_tree(const uint8_t ip_version, uint8_t record_size,
 }
 
 int insert_network(MMDBW_tree_s *tree, const char *const ipstr,
-                   const uint8_t prefix_length, SV *key, SV *data)
+                   const uint8_t prefix_length, SV *key, SV *data,
+                   bool force_overwrite)
 {
     MMDBW_network_s network = resolve_network(tree, ipstr, prefix_length);
 
@@ -169,7 +170,7 @@ int insert_network(MMDBW_tree_s *tree, const char *const ipstr,
         return -1;
     }
 
-    insert_resolved_network(tree, &network, key, data);
+    insert_resolved_network(tree, &network, key, data, force_overwrite);
 
     free_network(&network);
 
@@ -177,7 +178,7 @@ int insert_network(MMDBW_tree_s *tree, const char *const ipstr,
 }
 
 LOCAL void insert_resolved_network(MMDBW_tree_s *tree, MMDBW_network_s *network,
-                                   SV *key_sv, SV *data)
+                                   SV *key_sv, SV *data, bool force_overwrite)
 {
     const char *const key =
         store_data_in_tree(tree, SvPVbyte_nolen(key_sv), data);
@@ -189,7 +190,8 @@ LOCAL void insert_resolved_network(MMDBW_tree_s *tree, MMDBW_network_s *network,
     };
 
     insert_record_for_network(tree, network, &new_record,
-                              tree->merge_record_collisions);
+                              tree->merge_record_collisions
+                              && !force_overwrite);
 }
 
 LOCAL const char *store_data_in_tree(MMDBW_tree_s *tree,
