@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- $tree->insert_network now takes an optional additional-arguments hash
+  reference parameter. If this hash contains a truthy value for the
+  force_overwrite key, any data for the network will be overwritten even when
+  merge_record_collisions is enabled.
+
+
 0.100004 2015-07-15
 
 - Previously two equivalent data structures added to a database could end up
